--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "next": "10.0.1",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "react-redux": "^7.2.2"
   }
 }
